# hyperion

./: .gitignore  CMakeLists.txt  Makefile  OLD_CMakeLists.txt  build_cmake.sh  optimization_log.md  run_hyperion.slurm  zone_sweep_analysis.md
cmake/site/: site_AC.cmake
doc/: CMake_notes.txt  Hackathon_Notes.txt  tickertape_makefile_notes.txt
doc/devel/: gpu.txt
results/frontier/hip/4440718/: aggregated_results.csv  aggregated_results.txt
scripts/: AGG.sh  cmds.gdb  env_setup.txt  run_debug_hyp.sh  run_hyperion.sh  run_hyperion_lustre.sh  run_hyperion_profile.sh  run_interactive.sh  run_parallel_JOB.sh  run_parallel_profile.sh  tabulate_zone_sweep.sh  zone_sweep.sbatch
scripts/SLURM_BIN/: Sucsessful16.out
scripts/SLURM_BIN/ROUGH_TIMES/: 0064  0128  0256  0512  1024  2048  rough_times.txt
src/: CMakeLists.txt  main.c  main_gpu.c
src/apps/: CMakeLists.txt
src/core/: CMakeLists.txt  bn_burner.c  bn_burner_SIMD.c  bn_burner_gpu.c  bn_burner_gpu.h  bn_burner_gpu.hip  bn_burner_pec.c  init.c  kill.c  restrict.h  store.c  store.h
src/cpu/: CMakeLists.txt
src/gpu/: CMakeLists.txt  gpu_backend.c  gpu_backend.h
src/hipcore/: CMakeLists.txt  bn_burner_gpu.c  bn_burner_gpu.h  bn_burner_gpu.hip  hip.c  hip.h  hip_backend.c  hip_backend.h  hip_debug_kernel.h  hip_debug_kernel.hip  hip_wrapper.cpp
src/parse-data/: CMakeLists.txt  parser.c  parser.h
tests/HELLO_GPU/: hello_gpu.cpp  hello_gpu.sbatch
tools/: compare_tables.sh
